// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewMessageDialog > renders disabled empty state 1`] = `
<div
  class=""
  data-v-02224b09=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-02224b09=""
    iconcolor="secondary-text"
    title="Messages"
    titleicon="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
  />
  <v-card-text-stub
    class="d-flex flex-column pb-0 flex-grow-1"
    data-v-02224b09=""
    tag="div"
  >
    <empty-view-stub
      data-v-02224b09=""
      description=""
      descriptionrows="Messaging is disabled for this station.,To activate, please go to station settings and define email recipients."
      header="No messages"
      id="messaging-disabled-empty-state"
      imgurl="messages-disabled"
      imgwidth="340px"
      primarybtn="Go to settings"
      primarybtnicon=""
      secondarybtn="Learn more"
      secondarybtncolor=""
      secondarybtnicon=""
      small="false"
      tertiarybtn=""
      tertiarybtnicon=""
    />
  </v-card-text-stub>
  <v-row-stub
    class="justify-end flex-shrink-1 flex-grow-0"
    data-v-02224b09=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      cols="9"
      data-v-02224b09=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-card-actions-stub
        class=""
        data-v-02224b09=""
        tag="div"
      >
        <!--v-if-->
        <v-spacer-stub
          data-v-02224b09=""
          tag="div"
        />
        <evocon-v-button-stub
          color=""
          data-v-02224b09=""
          icon=""
          iconcolor=""
          text="Close"
          textclass=""
          type="secondary"
        />
      </v-card-actions-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;

exports[`ShiftviewMessageDialog > renders no messages view 1`] = `
<div
  class=""
  data-v-02224b09=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-02224b09=""
    iconcolor="secondary-text"
    title="Messages"
    titleicon="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
  />
  <v-card-text-stub
    class="d-flex flex-column pb-0 flex-grow-1"
    data-v-02224b09=""
    tag="div"
  >
    <v-row-stub
      data-v-02224b09=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        cols="3"
        data-v-02224b09=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <message-dialog-side-menu-stub
          active="0"
          data-v-02224b09=""
          loading="false"
          messages="[object Object]"
          selectedmessage="[object Object]"
        />
      </v-col-stub>
      <v-divider-stub
        data-v-02224b09=""
        gradient="false"
        inset="false"
        variant="solid"
        vertical="true"
      />
      <v-col-stub
        cols="9"
        data-v-02224b09=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="empty-state"
          data-v-02224b09=""
        >
          <empty-view-stub
            data-v-02224b09=""
            description="You can send messages to e-mails defined in station settings."
            descriptionrows=""
            header="Inbox is empty ({value})"
            id="no-messages-empty-view"
            imgurl="no-messages"
            imgwidth="340px"
            primarybtn=""
            primarybtnicon=""
            secondarybtn=""
            secondarybtncolor=""
            secondarybtnicon=""
            small="false"
            tertiarybtn=""
            tertiarybtnicon=""
          />
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-row-stub
    class="justify-end flex-shrink-1 flex-grow-0"
    data-v-02224b09=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      cols="9"
      data-v-02224b09=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-card-actions-stub
        class=""
        data-v-02224b09=""
        tag="div"
      >
        <!--v-if-->
        <v-spacer-stub
          data-v-02224b09=""
          tag="div"
        />
        <evocon-v-button-stub
          color=""
          data-v-02224b09=""
          icon=""
          iconcolor=""
          text="Close"
          textclass=""
          type="secondary"
        />
      </v-card-actions-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;
